# arrowquality

./: .gitignore  404.html  README.md  index.html  justfile  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api_reference/: index.html
docs/: api_reference.md  getting_started.md  quality_rules.md  supported_formats.md
getting_started/: index.html
notebooks/: dev.py
quality_rules/: index.html
search/: search_index.json
src/arrowquality/: validator.py
supported_formats/: index.html
tests/: test_validator.py
