[project]
name = "arrowquality"
version = "0.1.0"
description = "Lightweight data quality library built with PyArrow"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Emil Sadek", email = "esadek@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=19.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.3",
    "mkdocstrings[python]>=0.28.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

[tool.ruff.lint]
extend-select = ["I"]
